[package]
name = "export-synth-monitors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
csv = "1.1.6"
futures = "0.3.21"
reqwest = { version = "0.11.10", features = ["json", "gzip"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
